changed app name and test data

--- a/user/src/app/auth/pages/sign-up-page/sign-up-page.component.html
+++ b/user/src/app/auth/pages/sign-up-page/sign-up-page.component.html
@@ -1,7 +1,7 @@
 <section class="login-container">
     <div class="card">
         <h2 class="header">
-            ✈️ Academlo tours
+            ✈️ Sign up
         </h2>
         <form class="pt-3 mb-5" [formGroup]="userForm" (ngSubmit)="submit()">
             <div class="flex flex-column sm:flex-row gap-4 mb-5">
