--- a/user/src/app/shared/components/navbar/navbar.component.css
+++ b/user/src/app/shared/components/navbar/navbar.component.css
@@ -1,5 +1,6 @@
 .main-navbar {
     position: relative;
+    box-shadow: 2px 0px 6px rgba(0, 0, 0, .2);
 }
 
 .main-navbar .items-container{
@@ -7,9 +8,9 @@
     align-items: center;
     justify-content: space-between;
     padding: 10px 0;
-    height: 60px;
+    height: 80px;
     position: relative;
-    z-index: 9;
+    z-index: 99;
 }
 
 .main-navbar .logo-container{
@@ -42,8 +43,11 @@
     position: absolute;
     left: 0;
     right: 0;
-    bottom: -138%;
+    bottom: calc(-100% - 120px);
+    padding-bottom: 20px;
+    box-shadow: 2px 6px 6px rgba(0, 0, 0, .2);
     transition: .2s ease-in-out;
+    z-index: 9;
 }
 
 .items.dropdown .item{
@@ -53,6 +57,7 @@
 
 .items.dropdown.collapsed{
     bottom: 0;
+    box-shadow: none;
 }
 
 @media (min-width: 768px) {
