--- a/admin/src/app/auth/pages/login-page/login-page.component.css
+++ b/admin/src/app/auth/pages/login-page/login-page.component.css
@@ -1,12 +1,26 @@
+.form-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9;
+    background: rgba(0, 0, 0, .2);
+}
+
 
 .form{
-    width: 35%;
-    padding: 100px 30px 30px;
+    padding: 30px;
+    width: 95%;
+    max-width: 500px;
 }
 
 .login-banner {
     object-fit: cover;
-    width: 65%;
+    width: 100%;
     height: 100vh;
 }
 
@@ -18,4 +32,24 @@
 .test-data ul {
     margin: 0;
     list-style: none;
+}
+
+
+@media (min-width: 992px) {
+    .form-container{
+        position: static;
+        display: block;
+        width: 35%;
+        background: none;
+    }
+
+    .form{
+        padding-top: 100px;
+        width: 100%;
+        max-width: none;
+    }
+    
+    .login-banner {
+        width: 65%;
+    }
 }
