--- a/admin/src/app/auth/pages/login-page/login-page.component.html
+++ b/admin/src/app/auth/pages/login-page/login-page.component.html
@@ -2,72 +2,75 @@
 <section class="login-container flex">
 
 
-    <form 
-        (ngSubmit)="onSubmit()" 
-        [formGroup]="loginForm"
-        class="form">
+    <div class="form-container">
 
-        
-        <div >
-            <div class="flex justify-content-center mb-4">
-                <img 
-                    src="../../../../assets/gotour-logo.png" 
-                    alt=""
-                    style="width: 90px"
-                >
-                <div>
-                    <h2 class="mb-0">GoTour</h2>
-                    <small class="text-700 mb-3 block">(Admin version)</small>
-                </div>
-            </div>
-            <div class="test-data bg-green-100 p-4 border-round-sm mb-6">
-                <h4 class="mb-2">Test data</h4>
-                <div class="flex">
-                    <ul class="col-10">
-                        <li><i class="pi pi-envelope mb-2"></i> {{testData.email}}</li> 
-                        <li><i class="pi pi-lock"></i> {{testData.password}}</li> 
-                    </ul>
-                    <div class="col-2">
-                        <button 
-                            class="w-full" pButton icon="pi pi-copy" type="button"
-                            (click)="fillWithTestData()"
-                        ></button>
+        <form 
+            (ngSubmit)="onSubmit()" 
+            [formGroup]="loginForm"
+            class="form surface-0">
+    
+            
+            <div >
+                <div class="flex justify-content-center mb-4">
+                    <img 
+                        src="../../../../assets/gotour-logo.png" 
+                        alt=""
+                        style="width: 90px"
+                    >
+                    <div>
+                        <h2 class="mb-0">GoTour</h2>
+                        <small class="text-700 mb-3 block">(Admin version)</small>
                     </div>
                 </div>
+                <div class="test-data bg-green-100 p-4 border-round-sm mb-6">
+                    <h4 class="mb-2">Test data</h4>
+                    <div class="flex">
+                        <ul class="col-10">
+                            <li><i class="pi pi-envelope mb-2"></i> {{testData.email}}</li> 
+                            <li><i class="pi pi-lock"></i> {{testData.password}}</li> 
+                        </ul>
+                        <div class="col-2">
+                            <button 
+                                class="w-full" pButton icon="pi pi-copy" type="button"
+                                (click)="fillWithTestData()"
+                            ></button>
+                        </div>
+                    </div>
+                </div>
+                <span class="p-float-label block w-full mb-5">
+                    <input 
+                        pInputText 
+                        id="email" 
+                        formControlName="email" 
+                        class="w-full"
+                    />
+                    <label htmlFor="email">Email</label>
+                </span>
+                <span class="p-float-label block w-full mb-5">
+                    <input 
+                        pInputText 
+                        id="password" 
+                        formControlName="password" 
+                        class="w-full"
+                        type="password"
+                    />
+                    <label htmlFor="password">Password</label>
+                </span>
+                <button 
+                    pButton 
+                    type="submit" 
+                    label="Submit" 
+                    [loading]="isLoading"
+                    [disabled]="!loginForm.valid"
+                    class="w-full block p-button-success"
+                ></button>
+                <p-messages 
+                    [(value)]="messages" 
+                    [enableService]="false" 
+                ></p-messages>
             </div>
-            <span class="p-float-label block w-full mb-5">
-                <input 
-                    pInputText 
-                    id="email" 
-                    formControlName="email" 
-                    class="w-full"
-                />
-                <label htmlFor="email">Email</label>
-            </span>
-            <span class="p-float-label block w-full mb-5">
-                <input 
-                    pInputText 
-                    id="password" 
-                    formControlName="password" 
-                    class="w-full"
-                    type="password"
-                />
-                <label htmlFor="password">Password</label>
-            </span>
-            <button 
-                pButton 
-                type="submit" 
-                label="Submit" 
-                [loading]="isLoading"
-                [disabled]="!loginForm.valid"
-                class="w-full block p-button-success"
-            ></button>
-            <p-messages 
-                [(value)]="messages" 
-                [enableService]="false" 
-            ></p-messages>
-        </div>
-    </form>
+        </form>
+    </div>
 
     <video 
         [muted]="true"
