--- a/admin/src/app/guides/pages/all-guides/all-guides.component.html
+++ b/admin/src/app/guides/pages/all-guides/all-guides.component.html
@@ -12,7 +12,7 @@
 
 <div class="grid">
     <div 
-        class="sm:col-6 md:col-4"
+        class="col-12 sm:col-6 md:col-4"
         *ngFor="let guide of allGuides"
     >
         <p-card [header]="guide.name" [subheader]="guide.email">
@@ -20,7 +20,7 @@
                 <img 
                     alt="Card" 
                     [src]="guide.photo" 
-                    style="max-height: 300px; object-fit: cover;"
+                    style="object-fit: cover;"
                 />
             </ng-template>
             <!-- <p>
