--- a/admin/src/app/shared/layouts/main-layout/main-layout.component.css
+++ b/admin/src/app/shared/layouts/main-layout/main-layout.component.css
@@ -1,14 +1,4 @@
-.dashboard-container{
-    display: flex;
-}
 
-.side-menu-container{
-    width: 20%;
-}
-
-.outlet-container{
-    width: 80%;
-}
 
 .outlet{
     padding: 20px;
@@ -16,12 +6,17 @@
     margin: 0 auto;
 }
 
-.p-tieredmenu{
-    width: 20%;
-    border-radius: 0;
-    height: 100vh;
-    padding-top: 50px;
-    position: fixed;
-    top: 0;
-    bottom: 0;
+
+@media (min-width: 992px) {
+    .dashboard-container{
+        display: flex;
+    }
+
+    .side-menu-container{
+        width: 20%;
+    }
+    
+    .outlet-container{
+        width: 80%;
+    }
 }
