--- a/user/src/app/shared/components/navbar/navbar.component.html
+++ b/user/src/app/shared/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
-<nav class="main-navbar surface-0">
-    <div class="relative" style="z-index: 99;">
+<nav class="main-navbar surface-0" [ngClass]="{transparent: isTransparent}">
+    <div class="relative surface-0" style="z-index: 99;">
     
         <div class="container">
             <div class="items-container surface-0">
