--- a/admin/src/app/auth/pages/login-page/login-page.component.html
+++ b/admin/src/app/auth/pages/login-page/login-page.component.html
@@ -76,6 +76,7 @@
         [muted]="true"
         [autoplay]="true"
         [loop]="true"
+        [playsInline]="true"
         src="../../../../assets/login-banner.mp4" 
         alt="" 
         class="login-banner flex-3 "
